<resources>
    <string name="app_name">dataStore_chapter6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="passwordConfirmation">Confirm Password</string>
    <string name="back">Back</string>
</resources>